Test/src/main/java/com/example/test/global/error/ErrorCode.java
package com.example.test.global.error;

import com.fasterxml.jackson.annotation.JsonFormat;
import lombok.AllArgsConstructor;
import lombok.Getter;

@Getter
@AllArgsConstructor
@JsonFormat(shape = JsonFormat.Shape.OBJECT)
public enum ErrorCode {
    USER_NOT_FOUND(404,"USER-404-1","User NotFound");

    private final int status;
    private final String code;
    private final String message;
}